--- a/.env
+++ b/.env
@@ -7,11 +7,11 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3308
-DB_DATABASE=cst323data
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_HOST=gcu323testapp-mysqldbserver.mysql.database.azure.com
+DB_PORT=3306
+DB_DATABASE=mysqldatabase31906
+DB_USERNAME=mysqldbuser
+DB_PASSWORD=r00tpassQ@2
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
